# hive

./: .gitignore  CLAUDE.md  CMakeLists.txt  Hive.sln  README.md
HiveDebut/: Constantes.h  Controleur.cpp  Controleur.h  FenetrePrincipale.cpp  FenetrePrincipale.h  HiveDebut.qtvscr  HiveDebut.vcxproj  HiveDebut.vcxproj.filters  VuePartie.cpp  VuePartie.h  VuePion.cpp  VuePion.h  VuePlateau.cpp  VuePlateau.h  command.cpp  command.h  commande.cpp  commande.h  gestionnaireCommand.cpp  gestionnaireCommand.h  gestionnaireMouvements.cpp  gestionnaireMouvements.h  gestionnairePions.cpp  gestionnairePions.h  gestionnaireSauvegarde.cpp  gestionnaireSauvegarde.h  gestionnaireVoisins.cpp  gestionnaireVoisins.h  joueur.cpp  joueur.h  main.cpp  mouvement.cpp  mouvement.h  partie.cpp  partie.h  pions.cpp  pions.h  pionstype.h  plateau.cpp  plateau.h  (+3 more)
HiveDebut/Hive/Debug/qt/: qtvars.xml
HiveDebut/sauvegardes/: Texte.txt  TexteConsole.txt  console01.txt  etchebest01.txt  ia.txt  ia01.txt  jeaneric.txt  liste_sauvegardes.txt  livrable01.txt  local01.txt  local02.txt  local03.txt  local04.txt  local05.txt  main02.txt  main03.txt  main04.txt  main05.txt  partie01.txt  partie02.txt  partie03.txt  partie04.txt  partie05.txt  partie07.txt  qt01.txt  testc01.txt
HiveDebut/x64/Debug/: HiveDebut.exe.recipe  HiveDebut.ilk  HiveDebut.vcxproj.FileListAbsolute.txt  vc143.idb
include/: classes.h  pions.h  plateau.h  tableau.h
sauvegardes/: AsanClean.txt  AsanTest2.txt  QuickTest3.txt  TestPartie.txt  liste_sauvegardes.txt
src/: main.cpp  plateau.cpp
test/: plateau_main.cpp  test.txt
(+31 files in other folders)
